# _services_

./: Dockerfile  README.md  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
notification_service/: celery.py  settings.py  urls.py  yasg.py
services/: create_message.py  generation_of_full_report.py  integration_with_external_api.py
